refactor: change local storage item

--- a/frontend/src/Component/DashTable/style.css
+++ b/frontend/src/Component/DashTable/style.css
@@ -1,3 +1,172 @@
+
+.tableContainer{
+    overflow: scroll;
+    position: relative;
+}
+
+.tableContainer table{
+    white-space: nowrap;
+}
+
+.content-table {
+    border-collapse: collapse;
+    margin: 0 auto;
+    font-size: 0.9em;
+    min-width: 400px;
+    border-radius: 5px 5px 0 0;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    margin-top: 25px;
+    width: 90%;
+}
+::-webkit-scrollbar {
+    display: none;
+    }
+    .customers tr:nth-child(n){background-color: #f2f2f2;}
+    .customers tr:hover {background-color: #ddd;}
+    .customers th {
+        
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #000000;
+    color: white;
+    font-family: 'Orbitron', sans-serif;
+    letter-spacing: 5px;
+    
+}
+
+
+.content-table thead tr {
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 20px;
+    letter-spacing: 5px;
+    
+}
+
+
+.content-table th,
+.content-table td {
+    padding: 12px 15px;
+    font-family: 'Fredoka One', cursive;
+    text-transform: uppercase;
+    
+}
+
+.content-table tbody tr {
+    border-bottom: 1px solid #000000;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    letter-spacing: 2px;
+    
+    
+}
+
+.content-table tbody tr:nth-of-type(n) {
+    background-color: #ffffff;
+}
+
+.content-table tbody tr:last-of-type {
+    border-bottom: none;
+}
+
+.content-table tbody tr.active-row {
+    font-weight: bold;
+    color: #009879;
+    
+}
+
+#deleteInfo{
+    width: 50%;
+}
+#seeInfo{
+    background-color: rgb(141, 253, 219);
+    width: 50%;
+}
+
+
+@media (max-width: 700px) and (min-width: 300px){
+
+}
+
+
+
+
+
+
+
+
+
+
+
+/*
+<div className="infoDashTable">
+    <h2>Dash Table information</h2>
+    <p>In the following table you will be able to view each user registered in the app and the information of each registration that they make.</p>
+</div>
+<div className="dashTablesContainer">
+        <table id="userTable" className="customers">
+            <thead>
+                <tr>
+                    <th>Username</th>
+                    <th>Email</th>
+                    <th>Delete User</th>
+                    <th>Show user Info</th>
+                </tr>
+            </thead>
+            <tbody>
+                {userTest?.filter(users => users.email !== "admin@root.com" ).map((user,index) => {
+                    return (
+                    <>
+                <tr key={index}>
+                    <td>{user.username}</td>
+                    <td>{user.email}</td>
+                    <td><button id="deleteInfo" className="operationButton" onClick={() => deleteUser(user.idusers)}>Delete</button></td>
+                    <td><button id="seeInfo" className="operationButton" onClick={() => viewInfoUser(user.email)}>See Info</button></td>
+                </tr>
+                </>
+                )})}
+            </tbody>
+        </table>
+    <div style={{display: table ? 'block' : 'none'}} className="infoContainer">
+    <table id="infoTable" className="customers">
+        <thead>
+            <tr>
+                <th>Money Egress</th>
+                <th>Money Income</th>
+                <th>Number of records</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td style={{color:'red'}}>{totalUserEgress}</td>
+                <td style={{color:'green'}}>{totalUserIngress}</td>
+                <td>{operations?.length}</td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
+</div>
+
+
+
+
+
+
+const viewInfoUser = (email) => {
+    showTable(!table)
+    Axios.get(`${ROUTE_API}/getAllRegisters/${email}`).then((response) => {
+        setOperations(response.data)
+        setTotalUserIngress(totalEgressIngress(response.data, "Ingress"))
+        setTotalUserEgress(totalEgressIngress(response.data, "Egress"))
+    })
+    
+}
+
+
+
+
+
 .DashBoard{
     display: flex;
     justify-content: center;
@@ -17,7 +186,7 @@
     align-items: center;
     flex-direction: column;
     height: 50%;
-    width: 50%;
+    width: auto;
     border-radius: 15px;
     font-family: 'Open Sans Condensed', sans-serif;
     text-align: center;
@@ -29,6 +198,7 @@
 
 .infoDashTable p{
     font-size: 25px;
+    padding:20px;
     color: rgb(0, 0, 0);
 }
 .infoDashTable h2{
@@ -44,34 +214,6 @@
 
 .dashTablesContainer{
     display: flex;
-    justify-content: center;
-}
-    .customers td, .customers th {
-    padding: 8px;
-    text-align: center;
-    font-family: 'Righteous', cursive;
-    text-transform: uppercase;
-}
-.customers td{
-    font-size: 1.2rem;
-}
-#deleteInfo{
-    width: 7vw;
-}
-#seeInfo{
-    background-color: rgb(141, 253, 219);
-    width: 7vw;
-}
 
-    .customers tr:nth-child(n){background-color: #f2f2f2;}
-    .customers tr:hover {background-color: #ddd;}
-    .customers th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: #000000;
-    color: white;
-    font-family: 'Orbitron', sans-serif;
-    letter-spacing: 5px;
 }
-
+*/
