--- a/frontend/src/Component/Filter/style.css
+++ b/frontend/src/Component/Filter/style.css
@@ -2,19 +2,20 @@
     display: flex;
     flex-direction: column;
     align-content: center;
-    background: rgb(63,94,251);
-    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(33,37,40,1) 100%, rgba(74,252,70,1) 100%);
+    background-image: url('../../Images/filter-wallpaper.jpg');
     margin: 0 auto;
-    font-size: 1.5em;
-    font-family: 'Goldman', cursive;
     box-shadow: 50px 50px 50px rgba(0, 0, 0, 0.15);
     width:30vw;
     opacity: 0.7;
     padding-bottom:15px;
-    border-radius: 15px;
     text-align: center;
     margin-bottom: 15px;
     position:relative;
+}
+.mainFilterContainer h2{
+    font-size: 2rem;
+    font-family: 'Goldman', cursive;
+    color: rgb(255, 255, 255);
 }
 .filter{
     display: flex;
@@ -91,7 +92,7 @@ outline: none;
 
 @media (max-width: 800px)and (min-width: 300px){
     .mainFilterContainer{
-        width: 70vw;
+        width: 100%;
     }
     .mainFilterContainer h2{
         font-size: 1.4rem;
