--- a/frontend/src/Component/FormUpdate/style.css
+++ b/frontend/src/Component/FormUpdate/style.css
@@ -3,23 +3,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    background: rgb(2,0,36);
-    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(92,68,10,1) 0%, rgba(27,34,228,1) 0%, rgba(162,4,161,1) 0%, rgba(249,214,248,1) 0%, rgba(241,23,240,1) 0%, rgba(59,179,221,1) 0%, rgba(195,12,194,1) 0%, rgba(13,246,47,0.3337710084033614) 0%, rgba(221,59,155,1) 0%, rgba(76,80,77,1) 0%, rgba(25,34,5,1) 0%, rgba(78,125,3,1) 0%, rgba(0,0,0,1) 0%, rgba(0,253,255,1) 100%, rgba(198,92,54,1) 100%, rgba(169,204,96,1) 100%, rgba(240,8,67,1) 100%, rgba(0,0,0,1) 100%);
+    background-image: url('../../Images/form-update-wallpaper.jpg');
     margin: 0 auto;
-    font-size: 1.5em;
-    font-family: 'Goldman', cursive;
     box-shadow: 50px 50px 50px rgba(0, 0, 0, 0.15);
     width:30vw;
-    height: 40vh;
+    height: 100%;
     opacity: 0.7;
     padding-bottom:15px;
-    border-radius: 15px;
     text-align: center;
     margin-bottom: 15px;
     position:relative;
 }
-.mainUpdateFormContainer h3 {
+.mainUpdateFormContainer h2 {
     font-size: 35px;
+    font-size: 2rem;
+    font-family: 'Goldman', cursive;
+    color: rgb(255, 255, 255);
+    padding-bottom: 55px;
 }
 .updater{
     display: flex;
@@ -115,8 +115,7 @@
 
 @media (max-width: 800px)and (min-width: 500px){
     .mainUpdateFormContainer{
-        width: 70vw;
-        height: 42vh;
+        width: 100%;
     }
     .updater{
         height: 15vh;
@@ -137,7 +136,7 @@
 }
 @media (max-width: 500px)and (min-width: 200px){
     .mainUpdateFormContainer{
-        width: 75vw;
+        width: 100%;
         height: 48vh;
     }
     .mainUpdateFormContainer h3{
