--- a/frontend/src/Component/HomeTable/style.css
+++ b/frontend/src/Component/HomeTable/style.css
@@ -3,6 +3,7 @@
 .container{
     text-align: center;
 }
+
 .container th h1 {
 	font-weight: bold;
 	font-size: 1em;
@@ -79,3 +80,9 @@
     transition-timing-function: line;
 }
 
+
+@media (max-width: 700px)and (min-width: 300px){
+.main-container-table h1{
+    font-size: 1.8rem;
+}
+}
