--- a/frontend/src/Component/Filter/style.css
+++ b/frontend/src/Component/Filter/style.css
@@ -6,11 +6,13 @@
     margin: 0 auto;
     box-shadow: 50px 50px 50px rgba(0, 0, 0, 0.15);
     width:30vw;
+    height: 100%;
     opacity: 0.7;
     padding-bottom:15px;
     text-align: center;
     margin-bottom: 15px;
     position:relative;
+    border:4px solid  rgb(0, 0, 0);
 }
 .mainFilterContainer h2{
     font-size: 2rem;
