--- a/frontend/src/Component/FormUpdate/style.css
+++ b/frontend/src/Component/FormUpdate/style.css
@@ -7,7 +7,7 @@
     margin: 0 auto;
     box-shadow: 50px 50px 50px rgba(0, 0, 0, 0.15);
     width:30vw;
-    height: 100%;
+    height: 38vh;
     opacity: 0.7;
     padding-bottom:15px;
     text-align: center;
@@ -116,6 +116,7 @@
 @media (max-width: 800px)and (min-width: 500px){
     .mainUpdateFormContainer{
         width: 100%;
+        height: 100%;
     }
     .updater{
         height: 15vh;
